tejpratap0-salesforce/Test_AggregateData/src/objects/AggregatedData__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aggregated Datas</relationshipLabel>
        <relationshipName>Aggregated_Datas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseIds__c</fullName>
        <label>Case Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <label>Cases</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactIds__c</fullName>
        <label>Contact Ids</label>
        <length>4097</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <label>Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunitiesCL__c</fullName>
        <label>Opportunity Close Lost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunitiesCW__c</fullName>
        <label>Opportunity Closed Won</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunitiesER__c</fullName>
        <label>Opportunity Expected Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunitiesOP__c</fullName>
        <label>Opportunity Open</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label>Opportunity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityCLIds__c</fullName>
        <label>Opportunity Close Lost Ids</label>
        <length>4097</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityCWIds__c</fullName>
        <label>Opportunity Closed Won</label>
        <length>4097</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityOPIds__c</fullName>
        <label>Opportunity Open Ids</label>
        <length>4097</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WeekEndDate__c</fullName>
        <label>Week End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WeekNumber__c</fullName>
        <label>Week Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeekStartDate__c</fullName>
        <label>Week Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Aggregated Data</label>
    <nameField>
        <label>AggregatedData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aggregated Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>